# python-aqa-framework

./: README.md  pyproject.toml  pytest.ini
